// Copyright 2016 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package istio.mixer.v1.config.descriptor;

// Configuration state for a particular quota.
//
// Quotas are similar to metrics, except that they are mutated through method
// calls and there are limits on the allowed values.
// The descriptor below lets you define a quota and indicate the maximum
// amount values of this quota are allowed to hold.
//
// A given quota is described by a set of attributes. These attributes represent
// the different dimensions to associate with the quota. A given quota holds a
// unique value for potentially any combination of these attributes.
//
// The quota kind controls the general behavior of the quota. An allocation
// quota is only adjusted through explicit method calls. A rate limit quota's
// values are reset to 0 automatically at a fixed interval.
message QuotaDescriptor {
  // The name of this descriptor.
  string name = 1;

  // A optional concise name for the quota, which can be displayed in user interfaces.
  // Use sentence case without an ending period, for example "Request count".
  string display_name = 2;

  // An optional description of the quota, which can be used in documentation.
  string description = 3;

  // The name of the attribute that supplies the amount for a given
  // quota allocation or release operation.
  string amount_attribute = 4;

  // The set of attributes that are necessary to describe a specific value cell
  // for a quota of this type.
  repeated string attributes = 5;

  // The default imposed maximum amount for values of this quota.
  int64 max_amount = 6;

  // The type of quota behavior expected, defaults to ALLOCATION_LIMIT if not specified
  QuotaKind kind = 7;

  // Whether the quota's current value is tracked precisely or not.
  // Precisely tracked quotas only allow a relatively modest level of
  // scaling, whereas imprecise quotas can support a nearly unbounded
  // level of scaling at the cost of potential accounting inaccuracies.
  bool precise = 8;

  enum QuotaKind {
    // Quota values are always explicitly manipulated via API calls.
    ALLOCATION_LIMIT = 0;

    // Quota limit expresses a maximum amount over a rolling time interval
    PER_SECOND_LIMIT = 1;

    // Quota limit expresses a maximum amount over a rolling time interval
    PER_MINUTE_LIMIT = 2;
  }
}
